<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:override="true">Health Monitoring</string>
    <string name="default_notification_channel_id" translatable="false">Etu_Health_Main_Channel</string>
    <string name="google_maps_key" translatable="false">AIzaSyBVtBkdI58dtvfb4XjFPFSbDihbvF0ElH0</string>

    <string name="phone_mask">+ 7 (XXX) XXX XX XX</string>
    <string name="input_phone_number">Номер телефона</string>
    <string name="input_sms_code">Код из смс</string>
    <string name="input_card_number">Введите номер карты</string>
    <string name="no_internet_connection">Нет интернет соединения. Попробуйте позже.</string>
    <string name="server_error">Ошибка сервера. Попробуйте позже</string>
    <string name="server_timeout_error">Ошибка сервера. Нет ответа от сервера. Попробуйте позже»</string>
    <string name="phone_number_incorrect">Номер телефона введен некорректно</string>
    <string name="card_number_incorrect">Номер карты введен некорректно</string>
    <string name="card_number">Номер карты</string>
    <string name="loading">Загрузка</string>
    <string name="sign_in">Войти</string>
    <string name="entrance">Вход</string>
    <string name="confirm">Подтвердить</string>
    <string name="to_register">Зарегистрироваться</string>
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="middlename">Отчество</string>
    <string name="birthday">Дата рождения</string>
    <string name="info">Информация</string>
    <string name="requests_list">Список заявок</string>
    <string name="greetings_s">Здравствуй %s</string>
    <string name="you_doctor_is_s">Твой доктор - %s</string>
    <string name="no_doctor_yet">Тебе скоро будет назначен врач</string>
    <string name="you_ill">Ты болеешь</string>
    <string name="you_not_ill">Ты здоров!</string>
    <string name="middleName">Отчество</string>
    <string name="state">Состояние</string>
    <string name="im_ill">Я заболел</string>
    <string name="data_successfully_sent">Данные отправлены успешно</string>
    <string name="create_illness">Создание заболевания</string>
    <string name="create_task">Создание задачи</string>
    <string name="temperature">Температура</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="symptoms">Симптомы</string>
    <string name="send">Отправить</string>
    <string name="you_doctor">Ваш доктор</string>
    <string name="closed">Закрытые</string>
    <string name="current">Текущие</string>
    <string name="new_">Новые</string>
    <string name="temperature_s">Температура: %s</string>
    <string name="patient_s">Пациент: %s</string>
    <string name="age_s">Возраст: %s</string>
    <string name="patient_s_age">Пациент: %s (%s)</string>
    <string name="symptoms_s">Симптомы: %s</string>
    <string name="create_date_s">Дата обращения: %s</string>
    <string name="request">Заявка</string>
    <string name="status_new">Статус: Новая заявка</string>
    <string name="status_current">Статус: Пациент на лечении</string>
    <string name="status_discharged">Статус: Пациент выписан</string>
    <string name="accept_request">Принять заявку</string>
    <string name="opened">Открытые</string>
    <string name="completed">Выполненные</string>
    <string name="deleted">Удаленные</string>
    <string name="active">Активные</string>
    <string name="medication_tasks">Задачи на прием лекарств</string>
    <string name="no_tasks">Нет задач</string>
    <string name="add">Добавить</string>
    <string name="medicine_name">Название лекарства</string>
    <string name="take_a_day">Принимать в день</string>
    <string name="take_until">Принимать до</string>
    <string name="create">Создать</string>
    <string name="set_home_point">Установить домашнюю точку</string>
    <string name="title_activity_map">Map</string>
    <string name="select_home_point">Выберите домашнюю точку</string>
    <string name="save">Сохранить</string>
    <string name="need_location_permissions_message">Для работы приложения необходимо доступ к геолокации</string>
    <string name="request_permissions">Запросить разрешения</string>
</resources>
