<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_all_fields" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/medicine_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMedicineName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            tools:text="Аспирин" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/take_until">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTakeDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="numberSigned"
                tools:text="20.05.2021" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/btSelectDateTo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:clickable="true"
            android:focusable="true" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/take_a_day">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPerDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            tools:text="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btCreate"
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:text="@string/create" />
</LinearLayout>